- Ported various improvements from mainline Electron Cash latest master branch

3.4.13 Updates & Features
-----
- Send BCH amount and SLP amount simultaneously
- Now tokens are now added to the Tokens tab automatically (distinguished with red text with "right-click to add" note)
- Added minting baton indication column in the Tokens tab
- Completed multi-payment support for simpleledger per URI spec, send tab only, doesn't include tokenflags
- Added https://simpleledger.info to block explorers list, removed non SLP-enabled explorers from list 
- Enable SLP for "slp_imported_privkey" and "slp_imported_addr" wallet types
- Fixed bug causing transaction to hang after uploading a Token Document
- Added support for signing multisig transactions without "x_pubkey" format, also can sign multisig from non-multisig wallet
- Various other fixes were ported from mainline Electron Cash
- Improved isolated of SLP gui from non-SLP type wallets
- Fixed gui window size issue with high resolution monitors (e.g., Microsoft Surface)
- Prevent spending of individual coins that are holding SLP tokens

3.4.14 Updates & Features
-----
- Fixed a critical bug for SLP with "Spend from confirmed coins only" selected in the preferences, having this option enabled could easily cause tokens to be burned
- Other bug fixes including: SLP fee calculations improved, incorrect password after completing token creation would cause crash
- Use separate change addresses in transactions having both BCH and SLP change when possible
- Auto-detect receipt of Genesis minting batons or coins
- Disable change address options in preferences
- Allow OP_RETURN entry in SLP wallets, but disable when a token is selected
- Reordered Send Tab amount input fields and moved token selector above amount inputs
- Ported many goodies from the [EC 4.0.6 release](https://github.com/Electron-Cash/Electron-Cash/releases/tag/4.0.6) including: CoinText support (SLP sending is not supported), automatic high resolution scaling